--- a/Pokedex-React-master/package.json
+++ b/Pokedex-React-master/package.json
@@ -2,12 +2,15 @@
   "name": "pokemon",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jhonathancs.github.io/React-Test-/",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d Pokedex-React-master",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
